projects/compiler/test/typechecker/funcdecl/error_invalid_vararg_position.out
Error at %FILE_NAME%:1:11
Invalid location for variadic parameter
  |  func foo(*a: Int[] = [], b: Int) {}
               ^
Variadic parameters must be the last in the parameter list
